[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "pub"
path = "src/main.rs"